@@ -78,6 +78,12 @@
         </dependency>
         <!-- Thanks for using https://jar-download.com -->
 
+        <dependency>
+            <groupId>com.fasterxml.uuid</groupId>
+            <artifactId>java-uuid-generator</artifactId>
+            <version>5.0.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -119,6 +125,10 @@
                         <args>java.base/jdk.internal.misc=ALL-UNNAMED</args>
                         <args>--add-exports</args>
                         <args>java.base/jdk.internal.vm.annotation=ALL-UNNAMED</args>
+                        <args>--add-exports</args>
+                        <args>java.base/jdk.internal.access=ALL-UNNAMED</args>
+                        <args>--add-exports</args>
+                        <args>java.base/jdk.internal.util.random=ALL-UNNAMED</args>
                     </compilerArgs>
                 </configuration>
             </plugin>
